// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/DataWell Fixed Width Row 1`] = `
<div
  data-css-1s5t7h8=""
>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-datawell__label psds-theme--dark"
        data-css-4o8urc=""
      >
        Dog count
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      234,345
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    >
      All the doggies
    </div>
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-datawell__label psds-theme--dark"
        data-css-4o8urc=""
      >
        Cat count
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      123
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    />
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-datawell__label psds-theme--dark"
        data-css-4o8urc=""
      >
        Rafters on the River
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      1,345/23,235
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    />
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-datawell__label psds-theme--dark"
        data-css-4o8urc=""
      >
        Flotsam
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      About 3
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    >
      The icky stuff that is not cats or dogs, floating in the river
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/DataWell Row 1`] = `
<div
  style={
    Object {
      "display": "flex",
    }
  }
>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-datawell__label psds-theme--dark"
        data-css-4o8urc=""
      >
        Dog count
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      234,345
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    >
      All the doggies
    </div>
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-datawell__label psds-theme--dark"
        data-css-4o8urc=""
      >
        Cat count
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      123
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    />
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-datawell__label psds-theme--dark"
        data-css-4o8urc=""
      >
        Rafters on the River
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      1,345/23,235
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    />
  </div>
  <div
    className="psds-datawell psds-datawell.psds-theme--dark"
  >
    <div>
      <span
        className="psds-datawell__label psds-theme--dark"
        data-css-4o8urc=""
      >
        Flotsam
      </span>
    </div>
    <div
      className="psds-datawell__data psds-theme--dark"
    >
      About 3
    </div>
    <div
      className="psds-datawell__sublabel psds-theme--dark"
    >
      The icky stuff that is not cats or dogs, floating in the river
    </div>
  </div>
</div>
`;
